--- a/app/views/admin/statistics_announcements/_form.html.erb
+++ b/app/views/admin/statistics_announcements/_form.html.erb
@@ -65,10 +65,79 @@
   } %>
 
   <% if statistics_announcement.new_record? %>
-    <%= render '/admin/shared/release_date', {
-      current_release_date: statistics_announcement.current_release_date,
-      name_prefix: "#{statistics_announcement.class.name&.underscore}[statistics_announcement_dates_attributes]",
-      id_prefix: "#{statistics_announcement.class.name&.underscore}_statistics_announcement_dates"
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Release date",
+      heading_size: "l"
+    } do %>
+      <%= render "components/datetime_fields_with_govuk_date_component", {
+        id: "statistics_announcement_statistics_announcement_dates_release_date",
+        date_heading: "Date (required)",
+        field_name: "release_date",
+        prefix: "statistics_announcement[statistics_announcement_dates_attributes]",
+        error_items: errors_for(statistics_announcement.errors, :"statistics_announcement_dates.release_date"),
+        date_hint: "For example, 01 08 2022",
+        time_hint: "For example, 09:30 or 19:30",
+        year: {
+          id: "statistics_announcement_statistics_announcement_dates_attributes_release_date_1i",
+          value: params.dig("statistics_announcement", "statistics_announcement_dates_attributes", "release_date(1i)") || statistics_announcement.current_release_date&.release_date&.year,
+          name: "statistics_announcement[statistics_announcement_dates_attributes[release_date(1i)]]",
+          label: "Year",
+          width: 4,
+        },
+        month: {
+          id: "statistics_announcement_statistics_announcement_dates_attributes_release_date_2i",
+          value: params.dig("statistics_announcement", "statistics_announcement_dates_attributes", "release_date(2i)") || statistics_announcement.current_release_date&.release_date&.month,
+          name: "statistics_announcement[statistics_announcement_dates_attributes[release_date(2i)]]",
+          label: "Month",
+          width: 2,
+        },
+        day: {
+          id: "statistics_announcement_statistics_announcement_dates_attributes_release_date_3i",
+          value: params.dig("statistics_announcement", "statistics_announcement_dates_attributes", "release_date(3i)") || statistics_announcement.current_release_date&.release_date&.day,
+          name: "statistics_announcement[statistics_announcement_dates_attributes[release_date(3i)]]",
+          label: "Day",
+          width: 2,
+        },
+        hour: {
+          id: "statistics_announcement_statistics_announcement_dates_attributes_release_date_4i",
+          value: params.dig("statistics_announcement", "statistics_announcement_dates_attributes", "release_date(4i)")&.to_i || statistics_announcement.current_release_date&.release_date&.hour
+        },
+        minute: {
+          id: "statistics_announcement_statistics_announcement_dates_attributes_release_date_5i",
+          value: params.dig("statistics_announcement", "statistics_announcement_dates_attributes", "release_date(5i)")&.to_i || statistics_announcement.current_release_date&.release_date&.min
+        },
+      } %>
+    <% end %>
+
+    <%= render "govuk_publishing_components/components/radio", {
+      heading: "Delivery date",
+      heading_size: "l",
+      name: "statistics_announcement[statistics_announcement_dates_attributes][precision]",
+      id: "statistics_announcement_statistics_announcement_dates_attributes_precision",
+      error_items: errors_for(statistics_announcement.errors, :"statistics_announcement_dates.precision"),
+      items: [
+        {
+          value: 0,
+          text: "Exact date (provisional)",
+          checked: statistics_announcement.current_release_date&.precision == 0 && !statistics_announcement.current_release_date&.confirmed
+        },
+        {
+          value: 1,
+          text: "Within one month (provisional)",
+          checked: statistics_announcement.current_release_date&.precision == 1
+        },
+        {
+          value: 2,
+          text: "Within two months (provisional)",
+          checked: statistics_announcement.current_release_date&.precision == 2
+        },
+        :or,
+        {
+          value: "exact_confirmed",
+          text: "Exact date (confirmed)",
+          checked: statistics_announcement.current_release_date&.precision == 0 && statistics_announcement.current_release_date&.confirmed
+        }
+      ]
     } %>
   <% end %>
 
