--- a/app/views/admin/role_appointments/_start_date_field.html.erb
+++ b/app/views/admin/role_appointments/_start_date_field.html.erb
@@ -1,24 +1,31 @@
-<%= render "components/datetime_fields", {
+<%= render "components/datetime_fields_with_govuk_date_component", {
   date_heading: "Start date (required)",
   heading_size: heading_size,
   field_name: "started_at",
   prefix: "role_appointment",
   id: "role_appointment_started_at",
   date_only: true,
-  date_hint: "For example, 01 August 2015",
+  date_hint: "For example, 01 08 2015",
   year: {
-    value: form.object.started_at&.year,
-    start_year: Date.today.year,
-    end_year: 1700,
+    value: params.dig("role_appointment", "started_at(1i)") || form.object.started_at&.year,
     id: "role_appointment_started_at_1i",
+    name: "role_appointment[started_at(1i)]",
+    label: "Year",
+    width: 4
   },
   month: {
-    value: form.object.started_at&.month,
+    value: params.dig("role_appointment", "started_at(2i)") || form.object.started_at&.month,
     id: "role_appointment_started_at_2i",
+    name: "role_appointment[started_at(2i)]",
+    label: "Month",
+    width: 2
   },
   day: {
-    value: form.object.started_at&.day,
+    value: params.dig("role_appointment", "started_at(3i)") || form.object.started_at&.day,
     id: "role_appointment_started_at_3i",
+    name: "role_appointment[started_at(3i)]",
+    label: "Day",
+    width: 2
   },
   error_items: errors_for(form.object.errors, :started_at),
 } %>
