--- a/app/views/admin/topical_events/_form.html.erb
+++ b/app/views/admin/topical_events/_form.html.erb
@@ -40,6 +40,7 @@
   } %>
 
   <div class="govuk-!-margin-bottom-8">
+    <%= hidden_field_tag "topical_event[logo_attributes][id]", topical_event.logo.id %>
     <%= render "components/single-image-upload", {
       title: "Logo",
       name: "topical_event[logo_attributes]",
