Updates helper methods to correct dropdown display

--- a/app/views/admin/more/index.html.erb
+++ b/app/views/admin/more/index.html.erb
@@ -6,18 +6,18 @@
   <div class="govuk-grid-column-two-thirds">
     <%= render "govuk_publishing_components/components/list", {
       items: [
-        admin_organisations_header_menu_link,
-        admin_policy_groups_header_menu_link,
-        admin_roles_header_menu_link,
-        admin_people_header_menu_link,
-        admin_topical_events_header_menu_link,
-        admin_worldwide_organisations_header_menu_link,
-        admin_world_location_news_header_menu_link,
-        admin_fields_of_operation_header_menu_link,
-        admin_cabinet_ministers_header_menu_link,
-        admin_get_involved_header_menu_link,
-        admin_sitewide_settings_header_menu_link,
-        admin_governments_header_menu_link,
+        admin_organisations_link,
+        admin_policy_groups_link,
+        admin_roles_link,
+        admin_people_link,
+        admin_topical_events_link,
+        admin_worldwide_organisations_link,
+        admin_world_location_news_link,
+        admin_fields_of_operation_link,
+        admin_cabinet_ministers_link,
+        admin_get_involved_link,
+        admin_sitewide_settings_link,
+        admin_governments_link,
       ],
     } %>
   </div>
