Add page title and context to legend for better accessibility

--- a/app/assets/stylesheets/admin/views/_document-collection-group-document-search-search-title-slug.scss
+++ b/app/assets/stylesheets/admin/views/_document-collection-group-document-search-search-title-slug.scss
@@ -1,3 +1,9 @@
+.app-view-document_collection_group_document_search {
+  .govuk-fieldset__heading {
+    @include govuk-responsive-margin(3, "bottom");
+  }
+}
+
 .app-view-document-collection-document-search-results__table {
   .govuk-table__cell:nth-child(2) {
     white-space: nowrap;
