--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,71 +1,61 @@
 <% environment = GovukPublishingComponents::AppHelpers::Environment.current_acceptance_environment %>
 <% admin_template ||= false %>
+<% organisation = current_user&.organisation %>
 
-  <%= render "govuk_publishing_components/components/layout_header", {
-    product_name: "Whitehall Publisher",
-    environment: environment,
-    navigation_items: [
-      {
-        text: "Dashboard",
-        href: admin_root_path,
-      },
-      {
-        text: "View website",
-        href: Whitehall.public_root,
-      },
-      {
-        text: "Switch app",
-        href: Plek.external_url_for("signon"),
-      },
+<%= render "govuk_publishing_components/components/layout_header", {
+  product_name: "Whitehall Publisher",
+  environment: environment,
+  navigation_items: [
+    {
+      text: "Dashboard",
+      href: admin_root_path,
+    },
+    {
+      text: "View website",
+      href: Whitehall.public_root,
+    },
+    {
+      text: "Switch app",
+      href: Plek.external_url_for("signon"),
+    },
+    *(
+      if user_signed_in?
+        [{
+           text: current_user.name,
+           href: admin_user_path(current_user),
+         },
+         {
+           text: "Logout",
+           href: "/auth/gds/sign_out",
+         }]
+      end),
+    {
+      text: "All users",
+      href: admin_users_path,
+    },
+  ],
+} %>
+
+<div class="govuk-width-container">
+  <%= render "components/sub_navigation", {
+    items: [
+      sub_nav_item("New document", admin_new_document_path),
+      sub_nav_item("Documents", admin_editions_path),
+      sub_nav_item("Statistics announcements", admin_statistics_announcements_path),
       *(
-        if user_signed_in?
-          [{
-             text: current_user.name,
-             href: admin_user_path(current_user),
-           },
-           {
-             text: "Logout",
-             href: "/auth/gds/sign_out",
-           }]
+        if user_signed_in? && organisation
+          [
+            sub_nav_item("Featured documents", features_admin_organisation_path(organisation, locale: nil)),
+            sub_nav_item("Corporate information", admin_organisation_corporate_information_pages_path(organisation)),
+          ]
         end),
-      {
-        text: "All users",
-        href: admin_users_path,
-      },
+      sub_nav_item("More", admin_more_path),
     ],
   } %>
+</div>
 
-  <div class="container-fluid">
-    <ul id="global-nav" class="masthead-tabs list-unstyled">
-      <li class="masthead-tab-item js-create-new create-new" data-module="navbar-toggle">
-        <a href="#new-document-menu" class="toggler js-navbar-toggle__toggler" id="new-document-label">New document</a>
-        <%= document_creation_dropdown %>
-      </li>
-      <%= admin_documents_header_link %>
-      <%= admin_statistics_announcements_link %>
-      <%= admin_featured_header_link %>
-      <%= admin_user_organisation_header_link %>
-      <li class="js-more-nav masthead-tab-item" data-module="navbar-toggle">
-        <a href="#more-links-menu" id="more-links-label" class="toggler js-navbar-toggle__toggler">More</a>
-        <ul id="more-links-menu" class="masthead-menu masthead-menu-right js-hidden unstyled js-navbar-toggle__menu hide-before-js-module-init" role="menu" aria-labelledby="more-links-label">
-          <%= admin_organisations_header_menu_link %>
-          <%= admin_policy_groups_header_menu_link %>
-          <%= admin_roles_header_menu_link %>
-          <%= admin_people_header_menu_link %>
-          <%= admin_topical_events_header_menu_link %>
-          <%= admin_worldwide_organisations_header_menu_link %>
-          <%= admin_world_location_news_header_menu_link %>
-          <%= admin_fields_of_operation_header_menu_link %>
-          <%= admin_cabinet_ministers_header_menu_link %>
-          <%= admin_get_involved_header_menu_link %>
-          <%= admin_sitewide_settings_header_menu_link %>
-          <%= admin_governments_header_menu_link %>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  <% if admin_template %>
-    <section class="notices">
-      <%= render partial: "shared/notices" %>
-    </section>
-  <% end %>
+<% if admin_template %>
+  <section class="notices">
+    <%= render partial: "shared/notices" %>
+  </section>
+<% end %>
