--- a/app/components/admin/edition_images/uploaded_images_component.html.erb
+++ b/app/components/admin/edition_images/uploaded_images_component.html.erb
@@ -3,7 +3,7 @@
   font_size: "l",
 } %>
 
-<%= render Admin::EditionImages::LeadImageComponent.new(edition: @edition) %>
+<%= render Admin::EditionImages::LeadImageComponent.new(edition: edition) %>
 
 <%= render "govuk_publishing_components/components/heading", {
   text: "Images available to use in document",
@@ -11,7 +11,7 @@
   padding: true,
 } %>
 
-<% if document_images %>
+<% if document_images.present? %>
   <%= render "govuk_publishing_components/components/inset_text", {
     text: "Copy the image markdown code to add images to the document body.",
     margin_top: 0,
@@ -19,27 +19,7 @@
 
   <ul class="govuk-list">
     <% document_images.each do |image| %>
-      <li class="govuk-grid-row">
-        <div class="govuk-grid-column-one-third">
-          <img src="<%= image[:url] %>" alt="<%= image[:preview_alt_text] %>" class="app-view-edition-resource__preview">
-          <% unless image[:all_image_asset_variants_uploaded] %><span class="govuk-tag govuk-tag--green">Processing</span><% end %>
-        </div>
-        <div class="govuk-grid-column-two-thirds">
-          <p class="govuk-body"><strong>Caption: </strong><%= image[:caption] %></p>
-          <p class="govuk-body"><strong>Alt text: </strong><%= image[:alt_text] %></p>
-          <%= render "govuk_publishing_components/components/copy_to_clipboard", {
-            label: tag.strong("Markdown code:"),
-            copyable_content: image[:markdown],
-            button_text: "Copy Markdown",
-          } %>
-        </div>
-        <div class="app-view-edition-resource__actions govuk-grid-column-full govuk-button-group">
-          <% image[:links].each do |link| %><%= link %><% end %>
-        </div>
-      </li>
-      <% if image != document_images.last %>
-        <li aria-hidden="true"><hr class="app-view-edition-resource__section-break govuk-section-break govuk-section-break--visible"></li>
-      <% end %>
+      <%= render Admin::EditionImages::ImageComponent.new(edition: edition, image: image, last_image: image == document_images.last) %>
     <% end %>
   </ul>
 <% else %>
