--- a/app/views/admin/topical_event_featurings/new.html.erb
+++ b/app/views/admin/topical_event_featurings/new.html.erb
@@ -28,8 +28,8 @@
         },
         hint: "Select a 960px wide and 640px tall image to be shown when featuring",
         name: "topical_event_featuring[image_attributes][file]",
-        id: "topical_event_featuring_image",
-        error_items: errors_for(@topical_event_featuring.errors, :image),
+        id: "topical_event_featuring_image_file",
+        error_items: errors_for(@topical_event_featuring.errors, :"image.file"),
       } %>
 
       <%= render "govuk_publishing_components/components/input", {
